Home Completed Export English till scroll control

--- a/collection.html
+++ b/collection.html
@@ -14,6 +14,9 @@
 
   <!--  <link rel="stylesheet" href="css/flexboxgrid.min.css">-->
   <!--  <link rel="stylesheet" href="css/normalize.css">-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet">
+  <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v24.0.0/dist/font-face.css" rel="stylesheet"
+        type="text/css"/>
   <link rel="stylesheet" href="css/en/main.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -29,7 +32,7 @@
 <div class="container">
   <section class="home collection-home" id="home">
     <div class="logo">
-      <img src="img/logo.png" alt="ARTCO">
+      <img src="img/artcologo3.svg" alt="ARTCO">
     </div>
     <div class="navbar">
       <div class="nav">
@@ -47,7 +50,7 @@
     <div class="shadow-text">
       <div class="wrapper">
         <h1 class="text">ARTCO</h1>
-        <h1 class="shadow">ARTCO</h1>
+<!--        <h1 class="shadow">ARTCO</h1>-->
       </div>
     </div>
   </section>
@@ -59,10 +62,12 @@
           <h1>Good design matters</h1>
           <h6>Good design matters and some text. Lorem ipsum as a test for this is just a text Good design matters and
             some</h6>
-          <div class="readmore">
-            <img src="img/arrow.png" alt="read more">
-            <h4>Product page</h4>
-          </div>
+          <button class="learn-more longer">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Product Page</span>
+          </button>
         </div>
       </div>
       <div class="image-object">
@@ -193,10 +198,26 @@
     <div class="footer">
       <div class="details">
         <div class="logo">
-          <div><img src="img/logo.png" alt=""></div>
+          <div><img src="img/artcologo3.svg" alt=""></div>
         </div>
         <div class="site-map">
-          <span>Explore</span>
+          <span>Explore
+            <span class="footer-slider-wrapper">
+              <span class="footer-slider roll-it">
+                <span>Smart</span>
+                <span>Inspiring</span>
+                <span>Inovative</span>
+                <span>Technotile</span>
+                <span>magic</span>
+                <span>Interesting</span>
+                <span>Reliable</span>
+                <span>immortal</span>
+                <span>Divine</span>
+                <span>Lovely</span>
+                <span>Pixel</span>
+              </span>
+            </span>
+          </span>
           <div class="wrapper">
             <div class="left">
               <ul>
@@ -267,7 +288,7 @@
             <span class="label">Enter your email</span>
             <span class="border"></span>
           </label>
-          <button type="submit">Submit</button>
+          <button class="submit"></button>
         </div>
       </div>
       <div class="social">
