--- a/home-fa.html
+++ b/home-fa.html
@@ -14,6 +14,9 @@
 
   <!--  <link rel="stylesheet" href="css/flexboxgrid.min.css">-->
   <!--  <link rel="stylesheet" href="css/normalize.css">-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet">
+  <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v24.0.0/dist/font-face.css" rel="stylesheet"
+        type="text/css"/>
   <link rel="stylesheet" href="css/fa/main.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -29,7 +32,7 @@
 <div class="container">
   <section class="home" id="home">
     <div class="logo">
-      <img src="img/logo.png" alt="ARTCO">
+      <img src="img/artcologo3.svg" alt="ARTCO">
     </div>
     <div class="navbar">
       <div class="nav">
@@ -60,25 +63,66 @@
   <section id="other">
 
     <div class="gooddesign">
+      <img src="img/whitish1.jpg" alt="">
+      <img class="hidden" src="img/whitish2.jpg" alt="">
+      <img class="hidden" src="img/whitish3.jpg" alt="">
+      <img class="hidden" src="img/whitish4.jpg" alt="">
+      <img class="hidden" src="img/whitish5.jpg" alt="">
       <div class="description">
         <div class="text-wrapper">
-          <h1>طراحی شیک مهمه</h1>
-          <h6>طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک نمونه متن لورم
-            ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک</h6>
+          <h1 data-image="whitish1.jpg">هنر زیبای طبیعت</h1>
+          <h1 class="off" data-image="whitish2.jpg">آوای اصالتی مانا</h1>
+          <h1 class="off" data-image="whitish3.jpg">متریال سفارشی محصول</h1>
+          <h1 class="off" data-image="whitish4.jpg">مقاوم تر از سنگ</h1>
+          <h1 class="off" data-image="whitish5.jpg">گارانتی چند منظوره محصولات</h1>
+          <h6>تجلی زیبایی و ظرافت بی نظیر محصولات فیروزه کوبی برمبنای طرح و نقش اسلیمی _ایرانی</h6>
           <button class="learn-more">
             <span class="circle" aria-hidden="true">
               <span class="icon arrow"></span>
             </span>
-            <span class="button-text">بیشتر بخوانید</span>
+            <span class="button-text">ادامه مطلب</span>
+          </button>
+          <h6 class="off">تجربه حس ماندگار اصالت با جریان حضور صنایع دستی فیروزه کوبی حاصل از تلفیق هنر اصیل ایران و هنر
+            دست استاد کاران ایرانی</h6>
+          <button class="learn-more off">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">ادامه مطلب</span>
+          </button>
+          <h6 class="off">استفاده از مس نورد شده با خلوص 99/1 درصد و ضخامت 1.5 میلیمتر در تمام محصولات فیروزه کوبی به
+            همراه پوشش نانو ذره BST آلمان جهت حفظ رنگ طبیعی فلز مس</h6>
+          <button class="learn-more off">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">ادامه مطلب</span>
+          </button>
+          <h6 class="off">استفاده از سنگ فیروزه نیشابور، با ماکسیمم تراکم میکروکریستال جهت بالا بردن شفافیت سنگ فیروزه
+            به همراه عایق نانو ذره SST برای محافظت محصول در برابر آب خوردگی ، حرارت و ضربه .</h6>
+          <button class="learn-more off">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">ادامه مطلب</span>
+          </button>
+          <h6 class="off">ارائه شناسنامه اصالت محصول برای تمام محصولات با نشان صادراتی و همچنین ارائه کارت گارانتی ضمانت
+            کیفیت تمام محصولات به مدت 10 سال.</h6>
+          <button class="learn-more off">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">ادامه مطلب</span>
           </button>
         </div>
       </div>
       <div class="titles">
         <ul>
-          <li><a href="#">محصول با کیفیت</a></li>
-          <li><a href="#">محصولات خوب</a></li>
-          <li><a href="#">محصول با کیفیت</a></li>
-          <li><a href="#">طراحی خوب مهمه</a></li>
+          <li><a href="#">هنر زیبای طبیعت</a></li>
+          <li><a href="#">آوای اصالتی مانا</a></li>
+          <li><a href="#">متریال سفارشی محصول</a></li>
+          <li><a href="#">مقاوم تر از سنگ</a></li>
+          <li><a href="#">گارانتی چند منظوره محصولات</a></li>
         </ul>
       </div>
 
@@ -87,8 +131,9 @@
       <div class="description">
         <div class="text-wrapper">
           <h1>مجموعه</h1>
-          <h6>طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک نمونه متن لورم
-            ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک</h6>
+          <h6>هنر و بازگشت به جوهر اصالت گوهری فاخر است از هنرمندی که روح خویش را به واسطه هنر دستانش به هنر صِرف پیوند
+            زده است و در ذات هنری فقید و اصیل روحی دوباره دمیده است تا ارزشی مانا خلق نماید که ریشه در تاریخی کهن دارد ،
+            ارزشی به اصالت گوهر فیروزه و جاودانی عنصری درخشان چون مس که با روح هنر جلوه گر اصالتی متمایز خواهد گشت. </h6>
           <button class="learn-more">
             <span class="circle" aria-hidden="true">
               <span class="icon arrow"></span>
@@ -106,14 +151,24 @@
       </div>
       <div class="description">
         <ul>
-          <li><a href="#">امکانات</a></li>
-          <li><a href="#">بارگیری</a></li>
-          <li><a href="#">ویژگی</a></li>
+          <li><a href="#">بسته بندی</a></li>
+          <li><a href="#">نحوه انتقال</a></li>
+          <li><a href="#">توضیح محصول</a></li>
         </ul>
-        <h5>چند نمونه متن لورم ایپسوم طراحی شیک نمونه متن لورم
-          ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم</h5>
-        <h5 class="off">یک متن نمونه</h5>
-        <h5 class="off">آسمان همیشه ابری نیست</h5>
+        <h5>وزن کم / زیبایی / استحکام سه مولفه کلیدی و مهم در صنعت بسته بندی صادراتی به شمار می رود ، واحد طراحی و تولید
+          بسته بندی محصولات شرکت آرتکو با اشراف بر فرهنگ کشورهای هدف و مسائل حمل و نقل و ویژگی های هر یک از محصولات
+          اقدام به طراحی بسته بندی های انحصاری / سفارشی نموده است و در بحث صادرات از بسته بندی های کاربردی بهره
+          می‌گیرد٫ </h5>
+        <h5 class="off">در فرایند انتقال محصولات ، تحویل به موقع محصولات طبق دوره زمانی ضمن قرار داد و همچنین پوشش
+          جابجایی طبق استانداردهای جهانی از لحاظ تحویل سالم محصولات و تعداد آن مطابق قرارداد ، ارکان اساسی و مهم در
+          تامین رضایت بخش مشتریان بین الملل شرکت آرتکو می باشد.
+          شرکت آرتکو در جریان قراردادهای چند جانبه با شرکت‌های حمل و نقل و ترانزیت های معتبر ایران و جهان ، انتقالی ایمن
+          را بر پایه تعهد های طرفین پوشش داده است .</h5>
+        <h5 class="off">زیبایی ذاتی محصولات دست ساز و ساخت بسته بندی های انحصاری متناسب با نوع محصول و بافت فرهنگ کشور
+          هدف عاملی مهم در خلق ارزش صادراتی و فروش این ارزش و هنر در تجارت آزاد جهانی به شمار میرود
+          شرکت آرتکو مفتخر است که در راستای تعاملی دو جانبه با تجار بخش بین الملل و تبادل اطلاعات با ایشان، به سطحی
+          کاربردی و عمیق از رفتار شناسی و خرید شناسی مرتبط با بازار هدف هر یک از کشور ها رسیده است و هر آنچه که بازار
+          تجار بخش بین الملل خواستار آن بوده را پوشش داده است. </h5>
         <button class="learn-more">
             <span class="circle" aria-hidden="true">
               <span class="icon arrow"></span>
@@ -125,8 +180,17 @@
     <div class="ourcustomers">
       <h1>مشتری های ما</h1>
       <div class="logos">
+        <div class="item"><img src="img/200.png" alt="Artco"></div>
+        <div class="item"><img src="img/300.png" alt="Artco"></div>
+        <div class="item"><img src="img/400.png" alt="Artco"></div>
+        <div class="item"><img src="img/600.png" alt="Artco"></div>
+        <div class="item"><img src="img/zurich-tile.png" alt="Artco"></div>
+      </div>
+      <div class="logos">
         <div class="item"><img src="img/customer1.png" alt="Artco"></div>
         <div class="item"><img src="img/customer2.png" alt="Artco"></div>
+        <div class="item"><img src="img/customer3.png" alt="Artco"></div>
+        <div class="item"><img src="img/customer3.png" alt="Artco"></div>
         <div class="item"><img src="img/customer3.png" alt="Artco"></div>
       </div>
     </div>
@@ -134,7 +198,7 @@
     <div class="footer">
       <div class="details">
         <div class="logo">
-          <div><img src="img/logo.png" alt=""></div>
+          <div><img src="img/artcologo3.svg" alt=""></div>
         </div>
         <div class="site-map">
           <span>اکسپلور
