--- a/home.html
+++ b/home.html
@@ -14,6 +14,9 @@
 
   <!--  <link rel="stylesheet" href="css/flexboxgrid.min.css">-->
   <!--  <link rel="stylesheet" href="css/normalize.css">-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet">
+  <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v24.0.0/dist/font-face.css" rel="stylesheet"
+        type="text/css"/>
   <link rel="stylesheet" href="css/en/main.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -29,7 +32,7 @@
 <div class="container">
   <section class="home" id="home">
     <div class="logo">
-      <img src="img/logo.png" alt="ARTCO">
+      <img src="img/artcologo3.svg" alt="ARTCO">
     </div>
     <div class="navbar">
       <div class="nav">
@@ -60,14 +63,52 @@
   <section id="other">
 
     <div class="gooddesign">
+      <img src="img/whitish1.jpg" alt="">
+      <img class="hidden" src="img/whitish2.jpg" alt="">
+      <img class="hidden" src="img/whitish3.jpg" alt="">
+      <img class="hidden" src="img/whitish4.jpg" alt="">
+      <img class="hidden" src="img/whitish5.jpg" alt="">
       <div class="description">
         <div class="text-wrapper">
-          <h1>Good design matters</h1>
-          <h6>Good design matters and some text. Lorem ipsum as a test for this is just a text Good design matters and
-            some
-            text. Lorem ipsum as a test for this is just a text Good design matters and some
-            text. Lorem ipsum as a test for its section. this is just a text its section. this is just a text</h6>
+          <h1 data-image="whitish1.jpg">Elegant Art of Nature </h1>
+          <h1 class="off" data-image="whitish2.jpg">Tune of Abiding Originality</h1>
+          <h1 class="off" data-image="whitish3.jpg">Customized Materials </h1>
+          <h1 class="off" data-image="whitish4.jpg">Tougher than Stone</h1>
+          <h1 class="off" data-image="whitish5.jpg"> All-inclusive Guarantee </h1>
+          <h6>The epitome of the unmatched elegance and delicacy of Iranian-arabesque-style turquoise inlay products </h6>
           <button class="learn-more">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Read More</span>
+          </button>
+          <h6 class="off">Experiencing the lasting sensation of originality with turquoise inlay handicrafts; the
+            products of original Iranian art combined with the skill of master craftsmen. </h6>
+          <button class="learn-more off">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Read More</span>
+          </button>
+          <h6 class="off">Using 1.99% pure, 1.5 millimeters thick rolled copper in all turquoise inlay products, coupled
+            with German-made BST nanoparticle coating for preserving the natural hue of copper. </h6>
+          <button class="learn-more off">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Read More</span>
+          </button>
+          <h6 class="off">Using Neyshabur turquoise with maximum microcrystal density for increased transparency, along
+            with SST nanoparticle coating aimed at preserving the product against moisture, heat and impact. </h6>
+          <button class="learn-more off">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Read More</span>
+          </button>
+          <h6 class="off">Provision of certificates of authenticity and 10-year warranty cards for all products with CE
+            markings.</h6>
+          <button class="learn-more off">
             <span class="circle" aria-hidden="true">
               <span class="icon arrow"></span>
             </span>
@@ -77,10 +118,11 @@
       </div>
       <div class="titles">
         <ul>
-          <li><a href="#">High quality product</a></li>
-          <li><a href="#">Good design matters</a></li>
-          <li><a href="#">High quality product</a></li>
-          <li><a href="#">Good design matters</a></li>
+          <li><a href="#">Elegant Art of Nature </a></li>
+          <li><a href="#">Tune of Abiding Originality</a></li>
+          <li><a href="#">Customized Materials </a></li>
+          <li><a href="#">Tougher than Stone</a></li>
+          <li><a href="#">All-inclusive Guarantee</a></li>
         </ul>
       </div>
 
@@ -89,9 +131,11 @@
       <div class="description">
         <div class="text-wrapper">
           <h1>Collection</h1>
-          <h6>Good design matters and some text. Lorem as a test for this is just a text Good design matters and
-            Lorem ipsum as a test for this is just a text Good design matters and some
-            text. Lorem ipsum as a test for its section. this is just a text its section. this is just a text</h6>
+          <h6>Artisanship and a return to the essence of originality are invaluable features of the artisan who, through
+            his craftsmanship, has tied his soul to pure art and breathed new life into a once-lost, authentic form of
+            art, in order to create a lasting value that stems from an ancient history; a value as original as the
+            turquoise stone itself and everlasting as a shiny element like copper, which will unite with the spirit of
+            art to symbolize a distinct form of authenticity.</h6>
           <button class="learn-more">
             <span class="circle" aria-hidden="true">
               <span class="icon arrow"></span>
@@ -109,16 +153,24 @@
       </div>
       <div class="description">
         <ul>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">Shipping</a></li>
-          <li><a href="#">Returns</a></li>
+          <li><a href="#">Packaging</a></li>
+          <li><a href="#">Transportation</a></li>
+          <li><a href="#">About the Product</a></li>
         </ul>
-        <h5>Good design matters and some text. Lorem as a test for this is just a text and
-          Lorem ipsum as a test for this is just a text some
-          text. ipsum as a test for this is just a text Good design matters and some
-          text.</h5>
-        <h5 class="off">Never trust a smile, Never trust a smile, Never trust a smile, Never trust a smile, </h5>
-        <h5 class="off">Pixel is not here, Pixel is not here, Pixel is not here, Pixel is not here, </h5>
+        <h5>Low weight, elegance and durability are three key factors in packaging of exported goods. Taking
+          into account the cultures of the target countries, transportation issues and the features of every product,
+          The Package Design and Manufacturing Unit in Artco Company has designed exclusive, customized packages and
+          makes use of functional packaging in exports. </h5>
+        <h5 class="off"> On-time delivery of products according to the delivery schedule per contract, as
+          well as observing global standards of transportation in terms of the number and the unharmed state of
+          delivered goods are the cornerstones of ensuring the satisfaction of Artco`s international customers. </h5>
+        <h5 class="off">Inherent beauty of handicrafts and manufacturing of exclusive packages
+          according to type of the product and the cultural context of target countries are important factors
+          contributing to the creation of export value and the selling of this value and art in the global free market.
+          Artco takes pride in the fact that, in an attempt to establish mutual relations with international traders and
+          exchanging information with them, it has achieved practical and profound levels of behavior analysis and
+          shopping behavior analysis with respect to the target market in each of the countries, and has covered all the
+          demands of the international markets.</h5>
         <button class="learn-more">
             <span class="circle" aria-hidden="true">
               <span class="icon arrow"></span>
@@ -130,8 +182,17 @@
     <div class="ourcustomers">
       <h1>Our Customers</h1>
       <div class="logos">
+        <div class="item"><img src="img/200.png" alt="Artco"></div>
+        <div class="item"><img src="img/300.png" alt="Artco"></div>
+        <div class="item"><img src="img/400.png" alt="Artco"></div>
+        <div class="item"><img src="img/600.png" alt="Artco"></div>
+        <div class="item"><img src="img/zurich-tile.png" alt="Artco"></div>
+      </div>
+      <div class="logos">
         <div class="item"><img src="img/customer1.png" alt="Artco"></div>
         <div class="item"><img src="img/customer2.png" alt="Artco"></div>
+        <div class="item"><img src="img/customer3.png" alt="Artco"></div>
+        <div class="item"><img src="img/customer3.png" alt="Artco"></div>
         <div class="item"><img src="img/customer3.png" alt="Artco"></div>
       </div>
     </div>
@@ -139,7 +200,7 @@
     <div class="footer">
       <div class="details">
         <div class="logo">
-          <div><img src="img/logo.png" alt=""></div>
+          <div><img src="img/artcologo3.svg" alt=""></div>
         </div>
         <div class="site-map">
           <span>Explore
