--- a/collection-fa.html
+++ b/collection-fa.html
@@ -14,6 +14,9 @@
 
   <!--  <link rel="stylesheet" href="css/flexboxgrid.min.css">-->
   <!--  <link rel="stylesheet" href="css/normalize.css">-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet">
+  <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v24.0.0/dist/font-face.css" rel="stylesheet"
+        type="text/css"/>
   <link rel="stylesheet" href="css/fa/main.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -29,7 +32,7 @@
 <div class="container">
   <section class="home collection-home" id="home">
     <div class="logo">
-      <img src="img/logo.png" alt="ARTCO">
+      <img src="img/artcologo3.svg" alt="ARTCO">
     </div>
     <div class="navbar">
       <div class="nav">
@@ -47,7 +50,7 @@
     <div class="shadow-text">
       <div class="wrapper">
         <h1 class="text">ARTCO</h1>
-        <h1 class="shadow">ARTCO</h1>
+<!--        <h1 class="shadow">ARTCO</h1>-->
       </div>
     </div>
   </section>
@@ -58,10 +61,12 @@
         <div class="text-wrapper">
           <h1>طراحی خوب مهمه</h1>
           <h6>طراحی خوب و مقداری متن نمونه برای پر کردن این جای خالی و جای خالی خط بعد با طراحی خوب</h6>
-          <div class="readmore">
-            <img src="img/arrow.png" alt="read more">
-            <h4>صفحه محصولات</h4>
-          </div>
+          <button class="learn-more">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">صفحه صادرات</span>
+          </button>
         </div>
       </div>
       <div class="image-object">
@@ -192,10 +197,26 @@
     <div class="footer">
       <div class="details">
         <div class="logo">
-          <div><img src="img/logo.png" alt=""></div>
+          <div><img src="img/artcologo3.svg" alt=""></div>
         </div>
         <div class="site-map">
-          <span>اکسپلور</span>
+          <span>اکسپلور
+            <span class="footer-slider-wrapper">
+              <span class="footer-slider roll-it">
+                <span>دقت</span>
+                <span>ظرافت</span>
+                <span>طراحی</span>
+                <span>این</span>
+                <span>چند</span>
+                <span>نمونه</span>
+                <span>کلمه</span>
+                <span>لورم</span>
+                <span>ایپسوم</span>
+                <span>است</span>
+                <span>آخری</span>
+              </span>
+            </span>
+          </span>
           <div class="wrapper">
             <div class="left">
               <ul>
@@ -266,7 +287,7 @@
             <span class="label">ایمیل را وارد کنید</span>
             <span class="border"></span>
           </label>
-          <button type="submit">ثبت</button>
+          <button class="submit"></button>
         </div>
       </div>
       <div class="social">
@@ -282,7 +303,7 @@
           </a>
         </div>
       </div>
-      <div class="copyright"><h6>تمامی حقوق برای شرکت <b>ARTCO</b>محفوظ است، 1398</h6></div>
+      <div class="copyright"><h6> تمامی حقوق برای شرکت <b>ARTCO</b> محفوظ است، 1398</h6></div>
     </div>
   </section>
 
