--- a/generalshop-fa.html
+++ b/generalshop-fa.html
@@ -31,11 +31,11 @@
   <div class="header">
     <div class="nav">
       <ul>
-        <li>خانه</li>
-        <li>گالری</li>
-        <li>بعضی</li>
-        <li>صادرات</li>
-        <li>درباره ما</li>
+        <li class="links">خانه</li>
+        <li class="links">گالری</li>
+        <li class="links">بعضی</li>
+        <li class="links">صادرات</li>
+        <li class="links">درباره ما</li>
         <li class="shop"><img src="img/shopping-cart.svg" alt="Buy"><span>4</span></li>
       </ul>
     </div>
@@ -43,7 +43,7 @@
 
   <div class="portrait"><img src="img/ring2.jpg" alt="">
     <h2>ما فکر می کنیم زیبایی ساده است</h2></div>
-  <div class="categories noback">
+  <div class="categories-noback">
     <div class="title regular">دسته بندی ها</div>
     <div class="cats-title">
       <ul>
@@ -95,7 +95,23 @@
         <div><img src="img/logo.png" alt=""></div>
       </div>
       <div class="site-map">
-        <span>اکسپلور</span>
+          <span>اکسپلور
+            <span class="footer-slider-wrapper">
+              <span class="footer-slider roll-it">
+                <span>دقت</span>
+                <span>ظرافت</span>
+                <span>طراحی</span>
+                <span>این</span>
+                <span>چند</span>
+                <span>نمونه</span>
+                <span>کلمه</span>
+                <span>لورم</span>
+                <span>ایپسوم</span>
+                <span>است</span>
+                <span>آخری</span>
+              </span>
+            </span>
+          </span>
         <div class="wrapper">
           <div class="left">
             <ul>
@@ -166,7 +182,7 @@
           <span class="label">ایمیل را وارد کنید</span>
           <span class="border"></span>
         </label>
-        <button type="submit">ثبت</button>
+        <button class="submit"></button>
       </div>
     </div>
     <div class="social">
@@ -182,11 +198,12 @@
         </a>
       </div>
     </div>
-    <div class="copyright"><h6>تمامی حقوق برای شرکت <b>ARTCO</b>محفوظ است، 1398</h6></div>
+    <div class="copyright"><h6> تمامی حقوق برای شرکت <b>ARTCO</b> محفوظ است، 1398</h6></div>
   </div>
 </div>
 
 <script src="js/vendor/modernizr-3.7.1.min.js"></script>
+<script src="js/vendor/jquery-3.4.1.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 
