--- a/generalshop.html
+++ b/generalshop.html
@@ -31,11 +31,11 @@
   <div class="header">
     <div class="nav">
       <ul>
-        <li>Home</li>
-        <li>Galley</li>
-        <li>Some</li>
-        <li>Export</li>
-        <li>About us</li>
+        <li class="links">Home</li>
+        <li class="links">Galley</li>
+        <li class="links">Some</li>
+        <li class="links">Export</li>
+        <li class="links">About us</li>
         <li class="shop"><img src="img/shopping-cart.svg" alt="Buy"><span>4</span></li>
       </ul>
     </div>
@@ -44,7 +44,7 @@
   <div class="portrait"><img src="img/ring2.jpg" alt="">
     <h2>We think beauty is simple</h2>
   </div>
-  <div class="categories noback">
+  <div class="categories-noback">
     <div class="title regular">Categories</div>
     <div class="cats-title">
       <ul>
@@ -55,32 +55,32 @@
       </ul>
     </div>
     <div class="items-wrapper">
-      <div class="item" id="one">
+      <div class="item">
         <img src="img/0.jpg" alt="">
         <span>Moham. D5-D6</span>
         <div class="seemore">See more</div>
       </div>
-      <div class="item" id="two">
+      <div class="item">
         <img src="img/ring.jpg" alt="">
         <span>Miveh G5-D6</span>
         <div class="seemore">See more</div>
       </div>
-      <div class="item" id="three">
+      <div class="item">
         <img src="img/0.jpg" alt="">
         <span>Flower D5-D6</span>
         <div class="seemore">See more</div>
       </div>
-      <div class="item" id="four">
+      <div class="item">
         <img src="img/0.jpg" alt="">
         <span>Flower D5-D6</span>
         <div class="seemore">See more</div>
       </div>
-      <div class="item" id="five">
+      <div class="item">
         <img src="img/0.jpg" alt="">
         <span>Flower D5-D6</span>
         <div class="seemore">See more</div>
       </div>
-      <div class="item" id="six">
+      <div class="item">
         <img src="img/ring.jpg" alt="">
         <span>Flower D5-D6</span>
         <div class="seemore">See more</div>
@@ -96,7 +96,23 @@
         <div><img src="img/logo.png" alt=""></div>
       </div>
       <div class="site-map">
-        <span>Explore</span>
+          <span>Explore
+            <span class="footer-slider-wrapper">
+              <span class="footer-slider roll-it">
+                <span>Smart</span>
+                <span>Inspiring</span>
+                <span>Inovative</span>
+                <span>Technotile</span>
+                <span>magic</span>
+                <span>Interesting</span>
+                <span>Reliable</span>
+                <span>immortal</span>
+                <span>Divine</span>
+                <span>Lovely</span>
+                <span>Pixel</span>
+              </span>
+            </span>
+          </span>
         <div class="wrapper">
           <div class="left">
             <ul>
@@ -167,7 +183,7 @@
           <span class="label">Enter your email</span>
           <span class="border"></span>
         </label>
-        <button type="submit">Submit</button>
+        <button class="submit"></button>
       </div>
     </div>
     <div class="social">
@@ -188,6 +204,7 @@
 </div>
 
 <script src="js/vendor/modernizr-3.7.1.min.js"></script>
+<script src="js/vendor/jquery-3.4.1.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 
